--- a/package.json
+++ b/package.json
@@ -5,33 +5,48 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack --mode=development"
+    "dev": "webpack --mode=development",
+    "dev:hot": "webpack-dev-server --mode development --open --hot"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "draft-js": "^0.11.0",
+    "draftjs-to-html": "^0.8.4",
     "formik": "^1.5.8",
+    "html-react-parser": "^0.9.1",
+    "html-to-draftjs": "^1.4.0",
     "html-webpack-plugin": "^3.2.0",
     "i": "^0.3.6",
     "npm": "^6.10.1",
     "react": ">=15",
     "react-dom": "^16.3.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-router-dom": "^5.0.1",
     "reactstrap": "^8.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
     "parcel-bundler": "^1.12.3",
     "sass": "^1.22.7",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.36.1",
-    "webpack-cli": "^3.3.6"
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.7.2"
   },
   "keywords": [],
   "author": "",
