--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode=development",
-    "dev:hot": "webpack-dev-server --mode development --open --hot"
+    "dev:hot": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode=production"
   },
   "dependencies": {
     "axios": "^0.19.0",
